--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 <body>
 
-    <div id="header">
-        <div id="logo">
-            <h3><span>hie.</span>li</h3>
-        </div>
-        <nav>
-            <a href="#">My hie.li</a>
-            <a href="#">Sign In</a>
-            <a href="#">Sing up</a>
-            <a href="#">GETSTARTED</a>
-        </nav>
-    </div>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
 
+
+        <label class="logo">hie.al</label>
+        <ul>
+            <li><a href="#">My hie.al</a></li>
+            <li><a href="#">Sing Up</a></li>
+            <li><a href="#">Sing In</a></li>
+            
+
+        </ul>
+    </nav>
     <div id="container">
 
         <div class="content-container">
